# mf-accounting-csv-analyzer

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  analysis-flow.md  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.json  vitest.config.ts
.claude/: settings.json
analysis/: __init__.py  common.py
analysis/checks/: README.md  __init__.py  catalog.md  check_consistency.py  check_dates.py  check_duplicates.py  check_outliers.py  check_receivables.py  check_recurring.py  check_recurring_amount.py  check_subaccount.py  check_tax.py  check_vendor_consistency.py  check_yoy.py  runner.py
analysis/filters/: __init__.py  filter_journal.py
analysis/summaries/: __init__.py  account_summary.py  catalog.md  monthly_trend.py  revenue_by_client.py  runner.py  tax_summary.py  vendor_summary.py
analysis/tools/: __init__.py  account_summary.py  catalog.md  monthly_trend.py  runner.py  tax_summary.py  vendor_summary.py
checks/: README.md  __init__.py  analysis-flow.md  catalog.md  check_consistency.py  check_dates.py  check_duplicates.py  check_outliers.py  check_receivables.py  check_recurring.py  check_tax.py  check_vendor_consistency.py  check_yoy.py  common.py  journal_columns.py  runner.py
gui/: csv-importer.html  csv-importer.ts  csv-utils.test.ts  csv-utils.ts  server.ts  tsconfig.browser.json  tsconfig.json  vite.config.ts
gui/client/: csv-importer.css  csv-importer.html  (+4 more)
schema/: README.md  csv-types.json  journal.json
scripts/: convert_encoding.sh
tests/: conftest.py  test_common.py  test_common_format_table.py  test_journal_columns.py
(+36 files in other folders)
