[project]
name = "mf-accounting-csv-analyzer"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = ["pytest>=9.0"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["analysis", "analysis.checks", "analysis.tools"]

[tool.pytest.ini_options]
testpaths = ["tests"]
