[project]
name = "mf-accounting-csv-analyzer"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = ["pytest>=9.0"]

[project.scripts]
check = "analysis.checks.runner:main"
summary = "analysis.summaries.runner:main"
filter-journal = "analysis.filters.filter_journal:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["analysis", "analysis.checks", "analysis.filters", "analysis.summaries"]

[tool.pytest.ini_options]
testpaths = ["tests"]
